2022-10-20T02:26:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3286378003 # 538
* notice: last 14d: unq all: 4 46
* notice: prev accum: outdated-unq outdated-all / unq all: 137 555 / 144 602
* notice: next accum: outdated-unq outdated-all / unq all: 138 556 / 144 602
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-05] / []

2022-10-18T16:39:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3275290679 # 534
* notice: last 14d: unq all: 5 47
* notice: prev accum: outdated-unq outdated-all / unq all: 135 551 / 144 602
* notice: next accum: outdated-unq outdated-all / unq all: 137 555 / 144 602
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-04] / []

2022-10-18T02:29:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3270159962 # 532
* notice: last 14d: unq all: 7 51
* notice: prev accum: outdated-unq outdated-all / unq all: 134 550 / 144 602
* notice: next accum: outdated-unq outdated-all / unq all: 135 551 / 144 602
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-03] / []

2022-10-14T16:36:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3251515811 # 522
* notice: last 14d: unq all: 8 52
* notice: prev accum: outdated-unq outdated-all / unq all: 133 549 / 144 602
* notice: next accum: outdated-unq outdated-all / unq all: 134 550 / 144 602
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-30] / []

2022-10-13T08:32:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3240849195 # 518