@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-20T02:26:55Z",
+  "timestamp" : "2022-10-21T01:59:47Z",
   "count_outdated" : 556,
   "uniques_outdated" : 138,
-  "count" : 602,
-  "uniques" : 144,
+  "count" : 603,
+  "uniques" : 145,
   "views" : [
     {
       "timestamp": "2022-10-10T00:00:00Z",
@@ -30,6 +30,13 @@
       "timestamp": "2022-10-13T00:00:00Z",
       "count": 6,
       "count_minmax": [ 6, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
