@@ -1,6 +1,6 @@
 {
-  "count": 46,
-  "uniques": 4,
+  "count": 47,
+  "uniques": 5,
   "views": [
     {
       "timestamp": "2022-10-10T00:00:00Z",
@@ -20,6 +20,11 @@
     {
       "timestamp": "2022-10-13T00:00:00Z",
       "count": 6,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-20T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
