@@ -1,3 +1,11 @@
+2022-10-21T01:59:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3294248904 # 541
+* notice: last 14d: unq all: 5 47
+* notice: prev accum: outdated-unq outdated-all / unq all: 138 556 / 144 602
+* notice: next accum: outdated-unq outdated-all / unq all: 138 556 / 145 603
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-20]
+
 2022-10-20T02:26:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3286378003 # 538
 * notice: last 14d: unq all: 4 46
